--- a/env.example
+++ b/env.example
@@ -1,3 +1,18 @@
-# Airtable Configuration
-AIRTABLE_TOKEN=your_airtable_personal_access_token_here
+# AIRTABLE CONFIGURATION
+# =====================
+# INSTRUCCIONES:
+# 1. AIRTABLE_TOKEN: Ve a https://airtable.com/account/token
+#    - Click "Create token"
+#    - Permiso: data.records:read, data.records:write, schema.bases:read
+#    - Selecciona tu base
+#    - Copia el token (aparece UNA SOLA VEZ)
+# 
+# 2. AIRTABLE_BASE_ID: Abre tu base en Airtable
+#    - URL: https://airtable.com/appXXXXXXXXXXXX/...
+#    - Copia: appXXXXXXXXXXXX
+
+AIRTABLE_TOKEN=your_personal_access_token_here
 AIRTABLE_BASE_ID=appXXXXXXXXXXXXXX
+
+# IMPORTANTE: Estas variables deben estar en Netlify Environment, NO en .env
+# Netlify → Site Settings → Build & Deploy → Environment
