--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
   "name": "hospital-capacitaciones",
   "version": "1.0.0",
-  "description": "Sistema de Capacitaciones HSLV",
+  "description": "Sistema de Capacitaciones - Hospital Susana López de Valencia",
   "main": "index.html",
   "scripts": {
     "dev": "netlify dev",
+    "build": "echo 'No build required'",
     "deploy": "netlify deploy --prod",
-    "build": "echo 'Build completed successfully' && exit 0"
+    "test": "echo 'Testing connection to Airtable'"
   },
-  "dependencies": {},
-  "devDependencies": {},
-  "engines": {
-    "node": "18.x"
+  "keywords": [
+    "hospital",
+    "capacitaciones",
+    "training",
+    "healthcare",
+    "airtable"
+  ],
+  "author": "Hospital Susana López de Valencia",
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.6.0"
+  },
+  "devDependencies": {
+    "netlify-cli": "^17.0.0"
   }
 }
