--- a/netlify.toml
+++ b/netlify.toml
@@ -1,20 +1,13 @@
+# Netlify Configuration File
+
 [build]
   functions = "netlify/functions"
   publish = "."
-
-[build.environment]
-  NODE_VERSION = "18"
 
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
 
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
-    Access-Control-Allow-Origin = "*"
+[dev]
+  functions = "netlify/functions"
