--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "hospital-capacitaciones",
+  "name": "sistema-capacitaciones-hospital",
   "version": "1.0.0",
-  "description": "Sistema de Capacitaciones - Hospital Susana López de Valencia",
+  "description": "Sistema de gestión de capacitaciones - Hospital Susana López de Valencia",
   "main": "index.html",
   "scripts": {
     "dev": "netlify dev",
-    "build": "echo 'No build required'",
-    "deploy": "netlify deploy --prod",
-    "test": "echo 'Testing connection to Airtable'"
+    "deploy": "netlify deploy --prod"
   },
-  "keywords": [
-    "hospital",
-    "capacitaciones",
-    "training",
-    "healthcare",
-    "airtable"
-  ],
-  "author": "Hospital Susana López de Valencia",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.0"
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "netlify-cli": "^17.0.0"
-  }
+  },
+  "keywords": [
+    "capacitaciones",
+    "hospital",
+    "airtable"
+  ],
+  "author": "",
+  "license": "ISC"
 }
