--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "exceljs": "^4.4.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "nodemailer": "^7.0.12"
   },
   "devDependencies": {
     "netlify-cli": "^17.0.0"
